# pups-extensions

./: .gitmodules  CHANGELOG  CMakeLists.txt  ext_test.cpp  installer.py  util.puppy
alg/: CMakeLists.txt  alg.cpp  alg.puppy  alg_iter.cpp  alg_rand.cpp  init.h
math/: CMakeLists.txt  init.h  math.cpp  math.puppy  math_constants.cpp  math_conversion.cpp  math_func.cpp
os/: CMakeLists.txt  init.h  module.puppy  os.cpp  os_cmd.cpp  os_entry.cpp  os_info.cpp  os_iter.cpp  os_path.cpp
sys/: CMakeLists.txt  init.h  module.puppy  sys.cpp  sys.puppy  sys_map.cpp  sys_ptr.cpp  sys_ver.cpp
